# category-actions

./: LICENSE  README.md  category-actions.cabal
.github/workflows/: dependency-graph.yml  haskell.yml
src/Control/Category/: Action.hs
src/Control/Category/Action/: Cokleisli.hs  Contravariant.hs  Core.hs  Functor.hs  Kleisli.hs  Laws.hs  MaybeFilter.hs
test/: ActionLawHelpers.hs  CokleisliSpec.hs  ContravariantSpec.hs  FunctorSpec.hs  KleisliSpec.hs  Spec.hs
